# ImageComposition

./: .gitignore  Cargo.toml  README.MD
src/: main.rs
src/methods/: first_method.rs  mod.rs  second_method.rs
src/processor/: avg_image_color.rs  color.rs  get_all_images_colors.rs  mod.rs  request_images.rs  test.rs
